--- a/third-project/css/style-shop.css
+++ b/third-project/css/style-shop.css
@@ -1,23 +1,111 @@
+/* Rodrigo Barba - Shinia */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,500;1,500&family=Roboto:wght@500&family=Tilt+Neon&family=Young+Serif&display=swap');
+
 /* Basic */
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: Tilt Neon;
     font-size: 16px;
-    line-height: 1.5;
+
     color: #333;
     background-color: #fff;
 }
 
 .base-custom {
-    background-color: #fc5050;
+    color: white;
+    font-family: Tilt Neon;
+
+    background-color: #80C2AF;
 }
 
 /* End - Basic */
+
+/* Main */
+.navbar-brand {
+    font-family: Tilt Neon;
+    font-weight: bolder;
+}
+
+.navbar-custom {
+    width: 95%;
+    margin: 0 auto;
+
+    font-family: Tilt Neon;
+    font-weight: 400;
+
+    border-radius: 15px;
+    box-shadow: 5px 5px 15px 0px #5b5b5b;
+}
+
+.blur {
+    filter: blur(15px);
+}
+
+.container-custom {
+    width: 95%;
+    margin: 0 auto;
+}
+
+.container-inner-shop {
+    width: 95%;
+    margin: 0 auto;
+}
+
+.col-products {
+    height: 84vh;
+    overflow-y: scroll;
+
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 5px 5px 15px 0px #5b5b5b;
+}
+
+.col-checkout {
+    height: 84vh;
+    overflow-y: scroll;
+
+    color: #80C2AF;
+
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 5px 5px 15px 0px #5b5b5b;
+}
+
+.table-custom thead th {
+    font-family: Tilt Neon;
+    font-weight: 600;
+    color: #80C2AF;
+}
+
+.card-custom {
+    min-height: 550px;
+}
+
+.card-custom img {
+    height: 200px;
+}
+
+@media screen and (max-width: 991px) {
+    .col-products {
+        height: 90vh;
+    }
+
+    .col-checkout {
+        min-height: 50vh;
+        margin-top: 18px;
+        margin-bottom: 18px;
+    }
+
+    .card-custom img {
+        height: 300px;
+    }
+}
+
+/* End - Main */
 
 /* Calculator */
 .btn-calculator {
@@ -26,7 +114,7 @@ body {
 }
 
 .calculator {
-    width: 400px; 
+    width: 400px;
     height: 565px;
 
     border-radius: 10px;
@@ -88,7 +176,7 @@ body {
 .calculator-key-enter {
     grid-column: 4 / 5;
     grid-row: 2 / span 4;
-    background: #fc5050;
+    background: #80C2AF;
     height: auto;
 }
 
